@@ -1,10 +1,12 @@
 Version 2.3-0
 
- o added Effect.mlm for multivariate linear models
+ o Added ci.style='bands', alpha= and lwd= to plot.effpoly() for line plots to give filled confidence bands and control line width
+
+ o Added Effect.mlm for multivariate linear models
  
  o Interpolating splines are now used by default when drawing lines in effects plots unless the argument use.splines=FALSE
  
- o effect() now calls Effect(); all effect() methods are removed.
+ o effect() now calls Effect(); all effect() methods are removed, but effect() will continue to work as before.
 
 Version 2.2-6
 
